# observational-learn

./: LICENSE  README.md  pyproject.toml
src/observational_learn/: __init__.py
src/observational_learn/evaluate/: __init__.py  _boxplots.py  _contingency_tables.py  _pairbalance.py
src/observational_learn/matching/: _pairmatching.py
src/observational_learn/sensitivity/: __init__.py  _pairsensitivity.py
