[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "observational_learn"
version = "0.0.7"
authors = [
  { name="jorgelh", email="author@example.com" },
]
description = "A Python package for causal methods in observational studies"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "scipy>=1.8",
    "matplotlib>=3.9"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "BSD-3-Clause"}
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
